removing category button for now, update prority styles and try to fix note editor on iphones

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -392,7 +392,8 @@ div[data-controller="task"]:hover {
 }
 
 #tasks.priority {
-    border: solid var(--red) 5px;
+    border: solid var(--blue) 5px;
+    border-radius: 8px;
 }
 
 #tasks .info {
